fixed flip card visibility

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -20,13 +20,11 @@
 }
 
 .me {
-    width:60%; 
-    height:100%;
+    width: 70%; 
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    border-radius: 5%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .boxImage {
