--- a/src/components/landingpage/landingpage.css
+++ b/src/components/landingpage/landingpage.css
@@ -144,7 +144,7 @@ body html{
 .boxList {
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
-    font-weight: 200;
+    font-weight: 600;
     color: #000000;
 }
 
@@ -196,12 +196,14 @@ body html{
     background-image: url("../../images/space.jpg");
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    backface-visibility: hidden;
   }
   
   .flip-card-back {
-    background-color: #fafafa;
+    background-color: #c2c2c2;
     border: 1.5px solid #000000;
     transform: rotateY(180deg);
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    backface-visibility: hidden;
 }
